--- a/proj/list.html
+++ b/proj/list.html
@@ -41,16 +41,16 @@
 </body>
 
 <script src="http://code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>
-<script src="plagin/kendo/js/jquery.min.js"></script>
+<script src="plagin/kendo/js/jquery.min.js" type="text/javascript"></script>
 <!-- Latest compiled and minified JavaScript -->
 
-<script src="plagin/payment/lib/jquery.payment.js"></script>
+<script src="plagin/payment/lib/jquery.payment.js" type="text/javascript"></script>
 <script src="plagin/maskMoney/src/jquery.maskMoney.js" type="text/javascript"></script>
 <script src="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/js/bootstrap.min.js"></script>
 
 <script src="plagin/kendo/js/kendo.all.min.js"></script>
 <script>
-    var crudServiceBaseUrl = "http://10.1.1.33:8000",
+    var crudServiceBaseUrl = "http://temp.black2black.ru",
         dataSource = new kendo.data.DataSource({
             transport: {
                 read: {
@@ -92,6 +92,7 @@
                                         name = input[0].name,
                                         good = false;
                                     input.attr("data-productNumvalidation-msg", "Некорректные данные");
+                                    //var w = input[0].children("input");
                                     if (name === "nam_card") {
                                         if (value === "" || value <= 0 || value.length > 20 || value.length < 12 || !/^\d+$/.test(input.val())) {
                                             good = false;
@@ -135,6 +136,9 @@
                                             input.addClass("has-error");
                                         }
                                     }
+
+                                    //                                    $(".    k-grid-update").kendoButton();
+                                    //                                    $(".k-grid-cancel").click();
                                     return good;
                                 }
                             }
@@ -153,7 +157,8 @@
                             validation: {
                                 required: true
                             }
-                        }
+                        },
+						id: { editable: false, nullable: false }
                     }
                 }
             }
@@ -164,6 +169,11 @@
         height: 300,
         toolbar: ["create"],
         columns: [
+			{
+                field: "id",
+                title: "ID",
+                width: "80px"
+            },
             {
                 field: "nam_card",
                 title: "Номер карты",
@@ -197,7 +207,7 @@
 
 
 
-    var crudServiceBaseUrlOrder = "http://10.1.1.33:8000",
+    var crudServiceBaseUrlOrder = "http://temp.black2black.ru",
         dataSourceOrder = new kendo.data.DataSource({
             transport: {
                 read: {
@@ -274,8 +284,12 @@
                                             input.removeClass("has-error");
                                         } else {
                                             good = true;
+                                            //                                                        input.addClass("has-error");
                                         }
                                     }
+
+                                    //                                    $(".    k-grid-update").kendoButton();
+                                    //                                    $(".k-grid-cancel").click();
                                     return good;
                                 }
 
@@ -295,7 +309,8 @@
                             validation: {
                                 required: true
                             }
-                        }
+                        },
+						id: { editable: false, nullable: false }
                     }
                 }
             }
@@ -307,6 +322,11 @@
         toolbar: ["create"],
         columns: [
             {
+                field: "id",
+                title: "ID",
+                width: "80px"
+            },
+			{
                 field: "nam_ord",
                 title: "Номер заказа",
                 width: "120px"
