--- a/proj/list.html
+++ b/proj/list.html
@@ -40,10 +40,10 @@
     </div>
 </body>
 
-<script src="http://code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>
+
 <script src="plagin/kendo/js/jquery.min.js" type="text/javascript"></script>
 <!-- Latest compiled and minified JavaScript -->
-
+<script src="http://code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>
 <script src="plagin/payment/lib/jquery.payment.js" type="text/javascript"></script>
 <script src="plagin/maskMoney/src/jquery.maskMoney.js" type="text/javascript"></script>
 <script src="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/js/bootstrap.min.js"></script>
@@ -59,7 +59,10 @@
                 },
                 update: {
                     url: crudServiceBaseUrl + "/update.php",
-                    dataType: "json"
+                    dataType: "json",
+					success: function (data) {
+						alert(data);
+					}
                 },
                 destroy: {
                     url: crudServiceBaseUrl + "/delete.php",
@@ -79,6 +82,13 @@
             },
             batch: true,
             pageSize: 20,
+			error: function (xhr, error) {
+				if (xhr.xhr.responseText === "")
+					alert("Ошибка");
+				else
+					alert(xhr.xhr.responseText);
+				//console.debug(xhr); console.debug(error);
+			},
             schema: {
                 model: {
                     id: "id",
@@ -199,7 +209,7 @@
                 title: "&nbsp;",
                 width: "120px"
             }],
-        editable: "inline",
+        editable: "inline"
     });
 
 
@@ -236,6 +246,13 @@
             },
             batch: true,
             pageSize: 20,
+			error: function (xhr, error) {
+				if (xhr.xhr.responseText === "")
+					alert("Ошибка");
+				else
+					alert(xhr.xhr.responseText);
+				//console.debug(xhr); console.debug(error);
+			},
             schema: {
                 model: {
                     id: "id",
@@ -351,7 +368,7 @@
                 title: "&nbsp;",
                 width: "120px"
             }],
-        editable: "inline",
+        editable: "inline"
     });
 </script>
 
