--- a/proj/list.html
+++ b/proj/list.html
@@ -41,12 +41,11 @@
 </body>
 
 
-<script src="plagin/kendo/js/jquery.min.js" type="text/javascript"></script>
-<!-- Latest compiled and minified JavaScript -->
+<!--<script src="plagin/kendo/js/jquery.min.js" type="text/javascript"></script>-->
 <script src="http://code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>
-<script src="plagin/payment/lib/jquery.payment.js" type="text/javascript"></script>
-<script src="plagin/maskMoney/src/jquery.maskMoney.js" type="text/javascript"></script>
-<script src="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/js/bootstrap.min.js"></script>
+<!--<script src="plagin/payment/lib/jquery.payment.js" type="text/javascript"></script>-->
+<!--<script src="plagin/maskMoney/src/jquery.maskMoney.js" type="text/javascript"></script>-->
+<!--<script src="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/js/bootstrap.min.js"></script>-->
 
 <script src="plagin/kendo/js/kendo.all.min.js"></script>
 <script>
@@ -60,9 +59,9 @@
                 update: {
                     url: crudServiceBaseUrl + "/update.php",
                     dataType: "json",
-					success: function (data) {
-						alert(data);
-					}
+                    complete: function(e) {
+                        $("#grid").data("kendoGrid").dataSource.read(); 
+                    }
                 },
                 destroy: {
                     url: crudServiceBaseUrl + "/delete.php",
@@ -70,7 +69,10 @@
                 },
                 create: {
                     url: crudServiceBaseUrl + "/insert.php",
-                    dataType: "json"
+                    dataType: "json",
+                    complete: function(e) {
+                        $("#grid").data("kendoGrid").dataSource.read(); 
+                    }
                 },
                 parameterMap: function (options, operation) {
                     if (operation !== "read" && options.models) {
@@ -226,7 +228,10 @@
                 },
                 update: {
                     url: crudServiceBaseUrlOrder + "/orderUpdate.php",
-                    dataType: "json"
+                    dataType: "json",
+                    complete: function(e) {
+                        $("#gridOrder").data("kendoGrid").dataSource.read(); 
+                    }
                 },
                 destroy: {
                     url: crudServiceBaseUrlOrder + "/orderDelete.php",
@@ -234,7 +239,10 @@
                 },
                 create: {
                     url: crudServiceBaseUrlOrder + "/orderInsert.php",
-                    dataType: "json"
+                    dataType: "json",
+                    complete: function(e) {
+                        $("#gridOrder").data("kendoGrid").dataSource.read(); 
+                    }
                 },
                 parameterMap: function (options, operation) {
                     if (operation !== "read" && options.models) {
